# mKmer

./: KmerCell.py  KmerCell_01.py  KmerCell_02.R  KmerFrequency.R  KmerFrequency.py  KmerGOn.py  KmerGOn_01.R  KmerGOn_02.sh  KmerGOn_Tom.R  KmerGOp.py  KmerGOp_01.sh  KmerGOp_02.R  KmerGOp_03.R  KmerGOp_Tom.R  KmerRank.py  MANIFEST.in  README.md  RemoveDuplicates.pl  RemoveDuplicates.py  __init__.py  mKmer.py  setup.cfg  setup.py  setup_conda.py  smAnnotation.py  smAnnotation.sh  umi_tools.sh
KmerGO/: prosite2021_04.meme
kraken2-report/: kraken2-report
mKmer/: cli.py
mKmer/KmerCell/: KmerCell_01.py  KmerCell_02.R  __init__.py
mKmer/KmerFrequency/: KmerFrequency.R  KmerFrequency.py  __init__.py
mKmer/KmerGOn/: KmerGOn.py  KmerGOn_01.R  KmerGOn_02.sh  KmerGOn_Tom.R  KmerGOn_gomo.R  __init__.py
mKmer/KmerGOp/: KmerGOp.py  KmerGOp_GOdb.R  KmerGOp_Tom.R  __init__.py
mKmer/KmerRank/: KmerRank.R  KmerRank.py  __init__.py
mKmer/RemoveDuplicates/: __init__.py
mKmer/smAnnotation/: __init__.py
pipline/: KmerFrequency.R  KmerRank.R  README.md  README.txt  RemoveDuplicates.pl  jellyfish.sh  smAnnotation.sh  umi-tools.sh
pipline/KmerCell/: KmerCell.pbs  KmerCell.sh  Kmercell.R  Kmercell.py
pipline/KmerGOn/: GO_Annotations.R  KmerGOn.sh  README.md  README.txt  run_ama_gomo.sh  tomtom_meme_txt.R
pipline/KmerGOp/: GO_Annotations.R  KmerGOp.sh  README.md  README.txt  markerkmer2pep.sh  tomtom.R
