[metadata]
name = mKmer
version = 1.0.0
description = A K-mer based tool for microbiome analysis
author = Your Name
author_email = your_email@example.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/mKmer
license = MIT

[options]
packages = find:
python_requires = >=3.8
zip_safe = False

[options.entry_points]
console_scripts =
    mKmer = mKmer.cli:main

[options.extras_require]
dev =
    black
    flake8
    pytest

[options.packages.find]
where = src

[conda]
dependencies =
    python=3.8.20
    r-base=4.3.2
    bioconda::meme=5.5.7
    bioconda::umi_tools=1.1.4
    bioconda::jellyfish=2.2.10
    conda-forge::anndata=0.9.2
    bioconda::seqkit=2.8.2
    bioconda::kraken2=2.1.3
    bioconda::bracken=2.8
    conda-forge::openjdk=11.0.23
    bioconda::r-Matrix=1.6.3
    bioconda::r-anndata=0.7.5.6
    bioconda::r-reticulate=1.34.0
    bioconda::r-optparse=1.7.5
    bioconda::r-ggplot2=3.4.4
    bioconda::r-ggseqlogo=0.2
    bioconda::r-patchwork=1.1.3
    bioconda::r-tidyverse=2.0.0
    bioconda::r-ggbump=0.1.0
    bioconda::r-gert=2.0.1
