[metadata]
name = mKmer
version = 1.0.0
description = A K-mer embedding algorithm using RNA K-mer matrix
author = Fangyu Mo
author_email = mofangyu@zju.edu.cn
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bioinplant/mKmer
license = MIT

[options]
packages = find:
python_requires = >=3.8
zip_safe = False

[options.entry_points]
console_scripts =
    mKmer = mKmer.cli:main

[options.extras_require]
dev =
    black
    flake8
    pytest
